# StarSystems

./: .env  .gitignore  Procfile  README.md  README.txt  database.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  star_system.db  star_system_app.py  star_system_cli.py  utils.py  web_app.py  web_data.py
.github/workflows/: python-ci.yaml
data/: star_systems.db.BAK  systems.csv
src/starsystems/: __init__.py  __main__.py  config.py
src/starsystems/cli/: __init__.py  app.py
src/starsystems/database/: __init__.py  connection.py  repository.py
src/starsystems/models/: __init__.py  planet.py  star_system.py
src/starsystems/services/: __init__.py  exoplanet_service.py  search_service.py
src/starsystems/web/: __init__.py  app.py
src/starsystems/web/templates/: systems.html
templates/: base.html  systems.html
tests/: Testing_Guide.md  conftest.py  test_database.py  test_import_from_web.py  test_models.py  test_utils.py  test_web_data.py
tests/test_cli/: test_cli.py
tests/test_database/: test_connection.py  test_repository.py
tests/test_models/: test_planet.py  test_star_system.py
tests/test_services/: test_exoplanet_service.py  test_search_service.py
tests/test_web/: test_web.py
