[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "starsystems"
version = "2.0.0"
description = "Exoplanet database and search tool using NASA Exoplanet Archive"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Stephen Brooks", email = "sbrooksco@example.com"}
]
keywords = ["exoplanets", "astronomy", "nasa", "database", "search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "requests>=2.31.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "ruff>=0.0.292",
    "mypy>=1.5.0",
]

[project.scripts]
starsystems = "starsystems.cli.app:main"

[project.urls]
Homepage = "https://github.com/sbrooksco/StarSystems"
Repository = "https://github.com/sbrooksco/StarSystems"
Issues = "https://github.com/sbrooksco/StarSystems/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
starsystems = ["web/templates/*.html"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=starsystems --cov-report=term-missing"


